--- a/com.custom.base/res/layout/com_top_navbar.xml
+++ b/com.custom.base/res/layout/com_top_navbar.xml
@@ -70,7 +70,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="17dp"
             android:adjustViewBounds="true"
             android:background="@drawable/com_nav_btn_selector"
             android:scaleType="centerInside"
@@ -102,6 +101,6 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="48dp"
         android:layout_marginRight="48dp"
-        android:textColor="@color/white" />
+        android:textColor="@color/com_nav_txt" />
 
 </RelativeLayout>
