--- a/com.custom.base/res/layout/com_list_empty_view.xml
+++ b/com.custom.base/res/layout/com_list_empty_view.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/list_empty_view_iv"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:visibility="gone" />
 
     <TextView
