--- a/com.custom.base/res/values/colors.xml
+++ b/com.custom.base/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="_999999">#999999</color> 
     <!--00999999  -->
 	<color name="_333333">#333333</color>
+	<color name="_7d7d7d">#7d7d7d</color>
 	<color name="_EEEEEE">#EEEEEE</color>
     <color name="menu_item_selector_pressed">#E7EFE2</color>
     <color name="menu_item_selector_normal">#ffffff</color>
